--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -182,7 +182,7 @@ background-color: #840b2a;
   z-index: 1;
 }
 
-.form,
+.form-main,
 .content {
   width: 50%;
   margin: 0 auto;
@@ -252,13 +252,13 @@ background-color: #840b2a;
   padding-bottom: 100px;
 } */
 
-.btn-logout {
+.btn-logout-main {
   cursor:alias;
   position:relative;
   z-index:3;
 }
 
-.btn-logout::before {
+.btn-logout-main::before {
   content:'';
   position:absolute;
   width:135px;
@@ -273,7 +273,7 @@ background-color: #840b2a;
 }
 
 
-.btn-logout::after {
+.btn-logout-main::after {
   content:'';
   position:absolute;
   
@@ -287,18 +287,18 @@ background-color: #840b2a;
 
 /* hover effect */
 
-.btn-logout:hover::before
+.btn-logout-main:hover::before
 {
 filter:blur(5px);
 
 }
 
-/* .btn-logout:hover::after
+/* .btn-logout-main:hover::after
 {
 border: 1px solid red;
 } */
 
-.btn-logout:hover::before
+.btn-logout-main:hover::before
 {
 background:linear-gradient(45deg, #ff0707, #ff920c,#ffee00);
 /* transform: rotate(-5deg); */
